--- a/css/game.css
+++ b/css/game.css
@@ -7,7 +7,8 @@
 }
 
 #field>div {
-padding: 5px;
+  padding: 5px;
+  position: relative;
 }
 #field img {
   width: 100%;
@@ -34,6 +35,19 @@ padding: 5px;
 img {
   margin: 0;
   display: block;
+}
+
+#field .covered,
+#field .uncovered{
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: calc(100% - 10px);
+  height: calc(100% - 10px);
+}
+
+#field .uncovered{
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
