--- a/css/game.css
+++ b/css/game.css
@@ -1,3 +1,7 @@
+body{
+  background-color: #ddd;
+}
+
 #game{
   display: flex;
   height: 2rem;
@@ -42,15 +46,6 @@
   position: relative;
 }
 
-#field>div>a{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 1px solid blue;
-}
-
 #field img {
   width: 100%;
 }
@@ -91,12 +86,43 @@ img {
   display: none;
 }
 
+#high-scores{
+  box-shadow: 0px 0px 6px 2px #666;
+  border-radius: 5px;
+  padding: .5rem 1rem;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
 
+table{
+  border: 1px solid #666; 
+  border-collapse: separate;
+  border-spacing: 0,;
+}
+
+table th{
+  background-color: #8B0000;
+  color: #fff;
+  padding: .2rem .5rem;
+}
+
+table td{
+  padding: .2rem .5rem;
+  height: 20px;
+}
+
+table tr:nth-child(odd){
+  background-color: #ddd;
+  margin: 0
+}
 
 @media screen and (min-width: 768px) {
   #field {
     max-width: 768px;
   }
-
 }
 
